[gd_scene load_steps=24 format=3 uid="uid://cpma71hojt8wy"]

[ext_resource type="Script" path="res://scripts/navscene.gd" id="1_fg51v"]
[ext_resource type="Texture2D" uid="uid://bprs5wk8f2qia" path="res://assets/TilesetFloor.png" id="1_p51p1"]
[ext_resource type="PackedScene" uid="uid://bxrfc2ttiaojn" path="res://scenes/wagon_ui.tscn" id="4_q45a2"]
[ext_resource type="PackedScene" uid="uid://dit4wkbv0e3nr" path="res://scenes/player.tscn" id="5_bbw0p"]
[ext_resource type="PackedScene" uid="uid://d11nep0qfx3xu" path="res://scenes/ui.tscn" id="5_qn5ki"]
[ext_resource type="PackedScene" uid="uid://bw7xh0xgjmtjm" path="res://scenes/wagon.tscn" id="6_k1s0f"]

[sub_resource type="TileMapPattern" id="TileMapPattern_rcg8y"]
tile_data = PackedInt32Array(0, 131073, 4, 65536, 131073, 5, 131072, 131073, 6, 1, 196609, 4, 65537, 196609, 5, 131073, 196609, 6, 196609, 196609, 7, 262145, 196609, 8, 2, 262145, 4, 65538, 262145, 5, 131074, 262145, 6)

[sub_resource type="TileMapPattern" id="TileMapPattern_c63qt"]
tile_data = PackedInt32Array(0, 393217, 3, 65536, 393217, 4, 131072, 393217, 5)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_n5bpy"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e0mkq"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_csa8g"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_uefjw"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tyi2x"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_m4lux"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_hr2ag"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_m5l1y"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_r6s4m"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0m3ay"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_voqxp"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1y8h5"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fbxyx"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x1848"]
texture = ExtResource("1_p51p1")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
11:0/0/terrain_set = 0
11:0/0/terrains_peering_bit/bottom_right_corner = 1
11:0/0/custom_data_0 = true
12:0/0 = 0
12:0/0/terrain_set = 0
12:0/0/terrain = 1
12:0/0/terrains_peering_bit/bottom_right_corner = 1
12:0/0/terrains_peering_bit/bottom_side = 1
12:0/0/terrains_peering_bit/bottom_left_corner = 1
12:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_e0mkq")
12:0/0/custom_data_0 = true
13:0/0 = 0
13:0/0/terrain_set = 0
13:0/0/terrains_peering_bit/bottom_left_corner = 1
13:0/0/custom_data_0 = true
14:0/0 = 0
14:0/0/terrain_set = 0
14:0/0/terrain = 1
14:0/0/terrains_peering_bit/bottom_side = 1
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/custom_data_0 = true
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
11:1/0/terrain_set = 0
11:1/0/terrain = 1
11:1/0/terrains_peering_bit/right_side = 1
11:1/0/terrains_peering_bit/bottom_right_corner = 1
11:1/0/terrains_peering_bit/top_right_corner = 1
11:1/0/custom_data_0 = true
12:1/0 = 0
12:1/0/terrain_set = 0
12:1/0/terrain = 1
12:1/0/terrains_peering_bit/right_side = 1
12:1/0/terrains_peering_bit/bottom_right_corner = 1
12:1/0/terrains_peering_bit/bottom_side = 1
12:1/0/terrains_peering_bit/bottom_left_corner = 1
12:1/0/terrains_peering_bit/left_side = 1
12:1/0/terrains_peering_bit/top_left_corner = 1
12:1/0/terrains_peering_bit/top_side = 1
12:1/0/terrains_peering_bit/top_right_corner = 1
12:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_csa8g")
12:1/0/custom_data_0 = true
13:1/0 = 0
13:1/0/terrain_set = 0
13:1/0/terrain = 1
13:1/0/terrains_peering_bit/bottom_left_corner = 1
13:1/0/terrains_peering_bit/left_side = 1
13:1/0/terrains_peering_bit/top_left_corner = 1
13:1/0/custom_data_0 = true
14:1/0 = 0
14:1/0/terrain_set = 0
14:1/0/terrain = 1
14:1/0/terrains_peering_bit/bottom_side = 1
14:1/0/terrains_peering_bit/top_side = 1
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:2/0/terrain_set = 0
11:2/0/terrains_peering_bit/top_right_corner = 1
11:2/0/custom_data_0 = true
12:2/0 = 0
12:2/0/terrain_set = 0
12:2/0/terrain = 1
12:2/0/terrains_peering_bit/top_left_corner = 1
12:2/0/terrains_peering_bit/top_side = 1
12:2/0/terrains_peering_bit/top_right_corner = 1
12:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_tyi2x")
12:2/0/custom_data_0 = true
13:2/0 = 0
13:2/0/terrain_set = 0
13:2/0/terrains_peering_bit/top_left_corner = 1
13:2/0/custom_data_0 = true
14:2/0 = 0
14:2/0/terrain_set = 0
14:2/0/terrain = 1
14:2/0/terrains_peering_bit/top_side = 1
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
11:3/0/terrain_set = 0
11:3/0/terrain = 1
11:3/0/terrains_peering_bit/right_side = 1
12:3/0 = 0
12:3/0/terrain_set = 0
12:3/0/terrain = 1
12:3/0/terrains_peering_bit/right_side = 1
12:3/0/terrains_peering_bit/left_side = 1
13:3/0 = 0
13:3/0/terrain_set = 0
13:3/0/terrain = 1
13:3/0/terrains_peering_bit/left_side = 1
14:3/0 = 0
14:3/0/terrain_set = 0
14:3/0/terrain = 1
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
11:4/0/custom_data_0 = true
12:4/0 = 0
15:4/0 = 0
16:4/0 = 0
16:4/0/custom_data_0 = true
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
0:5/0/custom_data_0 = true
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/terrains_peering_bit/bottom_right_corner = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/bottom_right_corner = 0
1:7/0/terrains_peering_bit/bottom_left_corner = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/bottom_left_corner = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
11:7/0/custom_data_0 = true
12:7/0 = 0
12:7/0/custom_data_0 = true
13:7/0 = 0
13:7/0/custom_data_0 = true
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
0:8/0/terrains_peering_bit/bottom_right_corner = 0
0:8/0/terrains_peering_bit/top_right_corner = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/terrains_peering_bit/bottom_right_corner = 0
1:8/0/terrains_peering_bit/bottom_left_corner = 0
1:8/0/terrains_peering_bit/top_left_corner = 0
1:8/0/terrains_peering_bit/top_right_corner = 0
1:8/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_r6s4m")
1:8/0/custom_data_0 = true
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 0
2:8/0/terrains_peering_bit/bottom_left_corner = 0
2:8/0/terrains_peering_bit/top_left_corner = 0
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrain = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
11:8/0/custom_data_0 = true
12:8/0 = 0
12:8/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_hr2ag")
12:8/0/custom_data_0 = true
13:8/0 = 0
13:8/0/custom_data_0 = true
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
0:9/0/terrain_set = 0
0:9/0/terrain = 0
0:9/0/terrains_peering_bit/top_right_corner = 0
1:9/0 = 0
1:9/0/terrain_set = 0
1:9/0/terrain = 0
1:9/0/terrains_peering_bit/top_left_corner = 0
1:9/0/terrains_peering_bit/top_right_corner = 0
2:9/0 = 0
2:9/0/terrain_set = 0
2:9/0/terrain = 0
2:9/0/terrains_peering_bit/top_left_corner = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
11:9/0/custom_data_0 = true
12:9/0 = 0
12:9/0/custom_data_0 = true
13:9/0 = 0
13:9/0/custom_data_0 = true
14:9/0 = 0
14:9/0/custom_data_0 = true
15:9/0 = 0
15:9/0/custom_data_0 = true
16:9/0 = 0
16:9/0/custom_data_0 = true
17:9/0 = 0
17:9/0/custom_data_0 = true
18:9/0 = 0
18:9/0/custom_data_0 = true
19:9/0 = 0
19:9/0/custom_data_0 = true
20:9/0 = 0
20:9/0/custom_data_0 = true
21:9/0 = 0
21:9/0/custom_data_0 = true
0:10/0 = 0
1:10/0 = 0
1:10/0/terrain_set = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
12:10/0/custom_data_0 = true
13:10/0 = 0
13:10/0/custom_data_0 = true
14:10/0 = 0
14:10/0/custom_data_0 = true
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
19:10/0/custom_data_0 = true
20:10/0 = 0
20:10/0/custom_data_0 = true
21:10/0 = 0
21:10/0/custom_data_0 = true
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
2:11/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_0m3ay")
3:11/0 = 0
3:11/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_1y8h5")
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
14:11/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_m5l1y")
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
0:12/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_n5bpy")
1:12/0 = 0
1:12/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_n5bpy")
2:12/0 = 0
2:12/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_voqxp")
3:12/0 = 0
3:12/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_0m3ay")
4:12/0 = 0
4:12/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_fbxyx")
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
12:15/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_uefjw")
12:15/0/custom_data_0 = true
12:15/0/custom_data_1 = true
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
0:18/0 = 0
1:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
1:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
12:22/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_m4lux")
12:22/0/custom_data_0 = true
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
0:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0

[sub_resource type="TileSet" id="TileSet_52851"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "desert"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
navigation_layer_0/layers = 1
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "slowterrain"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_x1848")
pattern_0 = SubResource("TileMapPattern_rcg8y")
pattern_1 = SubResource("TileMapPattern_c63qt")

[node name="navscene" type="Node2D"]
script = ExtResource("1_fg51v")

[node name="Enviorment" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Enviorment"]
tile_set = SubResource("TileSet_52851")
format = 2
layer_0/name = "GROUND"
layer_1/name = "foilage"

[node name="wagon" parent="." instance=ExtResource("6_k1s0f")]
position = Vector2(-664, -276)

[node name="wagonUI2" parent="wagon" instance=ExtResource("4_q45a2")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -31.2035
offset_top = -44.5177
offset_right = -31.2035
offset_bottom = -44.5177
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="UI" parent="." instance=ExtResource("5_qn5ki")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-321, 47)

[node name="INDICATER" type="Node2D" parent="."]

[node name="NPCGROUP" type="Node2D" parent="."]

[node name="ZOMBIEGROUP" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="player" parent="." instance=ExtResource("5_bbw0p")]
position = Vector2(-321, 47)

[connection signal="hovered_wagon" from="wagon/wagonUI2" to="." method="_on_wagon_ui_2_hovered_wagon"]
[connection signal="hovered_wagon_exit" from="wagon/wagonUI2" to="." method="_on_wagon_ui_2_hovered_wagon_exit"]
[connection signal="mouse_entered" from="wagon/wagonUI2" to="." method="_on_wagon_ui_2_mouse_entered"]
[connection signal="mouse_exited" from="wagon/wagonUI2" to="." method="_on_wagon_ui_2_mouse_exited"]
[connection signal="aim_action" from="UI" to="." method="_on_ui_aim_action"]
[connection signal="fire_action" from="UI" to="." method="_on_ui_fire_action"]
[connection signal="ui_interaction_ended" from="UI" to="." method="_on_ui_ui_interaction_ended"]
[connection signal="ui_interaction_started" from="UI" to="." method="_on_ui_ui_interaction_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
